app/components/SSTNav/style.scss
@import '../../styles/global-styles.scss';

.Package-Location {
    margin: 20px 0px 40px 0;
}
.Package-Location img{
    margin: auto;
}

.Package-Logo { 
    width: 90%; 
    cursor: pointer;
}
.text-link.my-account{
    display: flex;
    span{
        margin-right: 16px;
    }
}
.text-link {
    color: inherit;
    text-decoration: inherit;
    display: list-item;
    text-align: -webkit-match-parent;
    padding: 16px;
    width: 100%;
}
.sstnav .sub-item{
    padding: 8px 24px;
}
.text-link.active{
    background-color: #D8F0F9;
    font-weight: bold;
    color: $dark-blue;
}

.sstnav {
    svg {
        fill: $dark-blue;
    }
}
.sstnav .MuiListItem-root{
    padding: 0;
}

.sstnav li:hover {
    color: $light-blue !important;
}
.sst-menu-item{
    padding: 0 !important;
}
.sst-menu-item a, .sst-menu-item div{
    padding: 8px 24px;
}

